# plaq

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/find-quda-installation/: SKILL.md
.claude/skills/install-pyquda/: SKILL.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/api/: modules.rst  plaq.rst
src/plaq/: __init__.py  _version.py  config.py  fields.py  lattice.py  layouts.py
src/plaq/backends/: __init__.py
src/plaq/backends/plaq/: __init__.py  bicgstab.py
src/plaq/backends/quda/: __init__.py
src/plaq/conventions/: __init__.py  gamma_milc.py
src/plaq/operators/: __init__.py  wilson.py
src/plaq/precond/: __init__.py  even_odd.py
src/plaq/solvers/: __init__.py  api.py  bicgstab.py  cg.py
src/plaq/utils/: __init__.py
tests/: __init__.py  test_backends.py  test_fields.py  test_gamma.py  test_layouts.py  test_placeholder.py  test_quda_backend.py  test_quda_solver.py  test_quda_wilson_comparison.py  test_solver_backend.py  test_solvers.py  test_wilson.py
