[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plaq"
version = "0.1.0"
description = "A lattice gauge theory toolkit for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Plaq Contributors" }]
keywords = ["lattice", "gauge theory", "physics", "pytorch", "quantum field theory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pyre-check>=0.9.0",
    "pre-commit>=4.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=3.0.0",
]
test = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plaq"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["plaq"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
